--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "v1.3.0"
+        "laravel/ui": "v1.3.0",
+        "spatie/laravel-permission": "3.18.0"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
